--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,9 +21,9 @@ jobs:
           go-version: '1.22.4'
 
       - name: Build
-        working-directory: ./...
+        working-directory: ./
         run: go build -v ./...
 
       - name: Test
-        working-directory: ./...
+        working-directory: ./
         run: go test -v ./...
