--- a/configs/config-gin.yml
+++ b/configs/config-gin.yml
@@ -1,6 +1,7 @@
 folders:
   - name: configs
   - name: delivery
-  - name: modules
-  - name: my_module4
-  - name: my_module5
+  - name: domain
+  - name: models
+  - name: repositories
+  - name: usecases
